// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.notification;
option java_multiple_files = true;

message NotificationTriggerRequest {
  string account_id = 1;
  string org_id = 2;
  string project_id = 3;
  string event_entity = 4;
  string event = 5;
  map<string, string> template_data = 6;
  string id = 7;
}
